welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:49: error: ';' expected but 'else' found.
  else if(getDirection()==Direction.OUEST){
  ^SnakeBuggle:57: error: ';' expected but 'else' found.
   }else{
    ^SnakeBuggle:65: error: Unmatched closing brace '}' ignored here
}
^