welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	setCouleurCorps(Color.blue)
  baisseBrosse()
  while (pos()!=true){
    serpent()
  }

}




def serpent(){
  
  if (estFaceMur()==true){

  	
  if (getDirection()==Direction.EST){
    	gauche()
    	avance()
    	gauche()
    
  }else if(getDirection()==Direction.OUEST){
    	droite()
    	avance()
    	droite()
  }
  }else{
    avance()
    
  }
}




def pos(){
  
	if ( estFaceMur()==true){
  	if (getDirection()==Direction.EST){
    gauche()
    
      droite()
      return true
    
    } else {
      droite()
    }
  else if(getDirection()==Direction.OUEST){
    droite()
      gauche()
      return true
    } else{
      gauche()
   }
  }
   }else{
      return false
    }
 
    
  
}